--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -4,17 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <title>Dashboard</title>
 </head>
 <body>
 
+    <nav class="bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-5">
+                    <h1>Store App</h1>
+                </div>
+            </div>
+
+        </div>
+    </nav>
     <section>
-        <div>
-            <h1>Hello Stranger</h1>
-            <p>Application coming soon we are going to make a </p>
+        <div class="container">
+            <div class="row">
+                <div class="col-4 offset-4 text-center bg-light">
+                    <h1>Hello Stranger</h1>
+                    <p>Application coming soon </p>
+                </div>
+                <div class="col-1 text-center offset-3">
+                    <a href="/add-store">+ Add Store</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-3 bg-info bg-opacity-50">
+                    <h3>Store Here Soon</h3>
+
+                </div>
+
+            </div>
 
         </div>
     </section>
     
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
