adding class methods

--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -19,6 +19,7 @@
 
         </div>
     </nav>
+
     <section>
         <div class="container">
             <div class="row">
@@ -33,6 +34,19 @@
         </div>
     </section>
 
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-3 bg-info bg-opacity-50">
+                    <h3>Store Here Soon</h3>
+
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+    
     <section>
         <div class="container">
             <div class="row">
