--- a/flask_app/templates/add_store.html
+++ b/flask_app/templates/add_store.html
@@ -4,9 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <title>Add Store</title>
 </head>
 <body>
-    
+    <nav class="bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-5">
+                    <h1>Store App</h1>
+                </div>
+            </div>
+
+        </div>
+    </nav>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-4 my-3">
+                    <h2>Add Store</h2>
+
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-4 my-3">
+                    <form action="/create-store" method="post">
+                        <div>
+                            <label for="name">Name:</label>
+                            <input type="text" name="name" id="name" class="form-control">
+                        </div>
+                        <div>
+                            <button type="submit" class="btn btn-primary my-2">Add</button>
+                        </div>
+
+                    </form>
+
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
