--- a/flask_app/templates/store.html
+++ b/flask_app/templates/store.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <title>Add Store</title>
+    <title>Store</title>
 </head>
 <body>
+    
     <nav class="bg-light">
         <div class="container">
             <div class="row">
@@ -19,33 +20,23 @@
         </div>
     </nav>
 
-    <section class="bg-light">
+    <section>
         <div class="container">
             <div class="row">
                 <div class="col-4 my-3">
-                    <h2>Add Store</h2>
-
+                    <h3>{{store.name}}</h3>
                 </div>
-
             </div>
-
         </div>
     </section>
 
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-4 my-3">
-                    <form action="/create-store" method="post">
-                        <div>
-                            <label for="name">Name:</label>
-                            <input type="text" name="name" id="name" class="form-control">
-                        </div>
-                        <div>
-                            <button type="submit" class="btn btn-primary my-2">Add</button>
-                        </div>
-
-                    </form>
+                <div class="col">
+                    <table>
+                        
+                    </table>
 
                 </div>
 
@@ -53,7 +44,6 @@
 
         </div>
     </section>
-
 
 
 
