--- a/flask_app/templates/store.html
+++ b/flask_app/templates/store.html
@@ -26,6 +26,9 @@
                 <div class="col-4 my-3">
                     <h3>{{store.name}}</h3>
                 </div>
+                <div class="col-1 offset-7">
+                    <a href="#">+ add product</a>
+                </div>
             </div>
         </div>
     </section>
@@ -34,8 +37,23 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <table>
-                        
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Category</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>example</td>
+                                <td>100</td>
+                                <td>Produce</td>
+                                <td><a href="#">Edit</a> | <a href="#">Sell</a></td>
+                            </tr>
+                        </tbody>
                     </table>
 
                 </div>
