added clearence/increase price links to store.html

--- a/flask_app/templates/store.html
+++ b/flask_app/templates/store.html
@@ -36,6 +36,27 @@
     <section>
         <div class="container">
             <div class="row">
+                <div class="col-3">
+                    <h6>All products actions</h6>
+
+                </div>
+                <div class="col-2">
+                    <a href="#">Increase Price</a>
+
+                </div>
+                <div class="col-2">
+                    <a href="#">Clearance</a>
+
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
                 <div class="col">
                     <table class="table">
                         <thead>
